--- a/branding.html
+++ b/branding.html
@@ -894,6 +894,105 @@
             </div>
         </section>
 
+        <section class="pt-10 pb-5 overflow-x-hidden">
+            <div class="container">
+                <span
+                    class="text-white uppercase text-sm font-light tracking-widest block"
+                    >Neon signage work we have carried out</span
+                >
+                <div class="px-0 w-[140%] sm:w-[135%] pt-5 lg:pt-10">
+                    <div class="js-neon-slider -ml-2">
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-2.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-3.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-4.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-5.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-6.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-7.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-8.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-9.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-10.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div
+                            class="w-full h-64 max-h-[64] sm:h-72 sm:max-h-72 md:h-64 md:max-h-64 lg:h-80 lg:max-h-80 px-2"
+                        >
+                            <img
+                                src="./assets/images/slider-2/image-11.jpg"
+                                alt="Alchemist"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/image-12.jpg"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/slider-2-image01.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                    </div>
+                </div>
+                <div class="js-neon-slider-dots pt-5"></div>
+            </div>
+        </section>
+
         <section class="py-10 lg:py-20 mx-auto">
             <div class="container">
                 <p class="text-center text-white text-2xl lg:text-4xl">
@@ -976,6 +1075,7 @@
             type="text/javascript"
             src="./src/js/ShowcaseSlider.js"
         ></script>
+        <script type="text/javascript" src="./src/js/NeonSlider.js"></script>
         <script type="text/javascript" src="./src/js/WorkSlider.js"></script>
         <script type="text/javascript" src="./src/js/MenuToggle.js"></script>
         <script type="text/javascript" src="./src/js/TouchHover.js"></script>
