new slider images

--- a/branding.html
+++ b/branding.html
@@ -154,12 +154,12 @@
             </div> -->
         </section>
 
-        <section class="py-10 lg:py-20">
+        <section class="pt-10 lg:pt-20 pb-6 lg:pb-14">
             <div class="container">
                 <h2
                     class="text-3xl text-white lg:leading-tight w-full lg:w-11/12"
                 >
-                    <span class="text-5xl"
+                    <span class="text-4xl lg:text-5xl"
                         >Helping you and your brand stand out from your
                         competitors.</span
                     ><br /><br />
@@ -171,10 +171,6 @@
 
         <section class="pb-5 overflow-x-hidden">
             <div class="container">
-                <span
-                    class="text-white uppercase text-sm font-light tracking-widest block"
-                    >Completed work we have carried out</span
-                >
                 <div class="px-0 w-[140%] sm:w-[135%] pt-5 lg:pt-10">
                     <div class="js-showcase-slider -ml-2">
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
@@ -888,6 +884,36 @@
                                 >Floor graphics</span
                             >
                         </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/slider-2-image01.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Digital signage</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/img-1.JPG"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Internal graphics</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-1/img-1.JPG"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >External illuminated signage</span
+                            >
+                        </div>
                     </div>
                 </div>
                 <div class="js-work-slider-dots pt-5"></div>
@@ -898,13 +924,69 @@
             <div class="container">
                 <span
                     class="text-white uppercase text-sm font-light tracking-widest block"
-                    >Neon signage work we have carried out</span
+                    >Bespoke neon signs and neon art</span
                 >
                 <div class="px-0 w-[140%] sm:w-[135%] pt-5 lg:pt-10">
                     <div class="js-neon-slider -ml-2">
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
                                 src="./assets/images/slider-2/image-2.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-2.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-3.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-4.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-5.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-6.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-7.jpg"
+                                alt="Hoarding graphics"
+                                class="object-center object-cover rounded-3xl"
+                            />
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/slider-2/chaly-8.jpg"
                                 alt="Hoarding graphics"
                                 class="object-center object-cover rounded-3xl"
                             />
@@ -946,13 +1028,6 @@
                         </div>
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
-                                src="./assets/images/slider-2/image-8.jpg"
-                                alt="Hoarding graphics"
-                                class="object-center object-cover rounded-3xl"
-                            />
-                        </div>
-                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
-                            <img
                                 src="./assets/images/slider-2/image-9.jpg"
                                 alt="Hoarding graphics"
                                 class="object-center object-cover rounded-3xl"
@@ -977,13 +1052,6 @@
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
                                 src="./assets/images/slider-2/image-12.jpg"
-                                class="object-center object-cover rounded-3xl"
-                            />
-                        </div>
-                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
-                            <img
-                                src="./assets/images/slider-1/slider-2-image01.jpg"
-                                alt="Hoarding graphics"
                                 class="object-center object-cover rounded-3xl"
                             />
                         </div>
