--- a/index.html
+++ b/index.html
@@ -60,11 +60,19 @@
                                 >
                             </div>
 
-                            <a
-                                href="./electrical.html"
-                                class="relative pl-5 hidden w-full hidden-menu-item border-white border-b lg:w-1/4"
-                                >Electrical
-                            </a>
+                            <span class="hidden-menu-item hidden">
+                                <a
+                                    href="./electrical.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block"
+                                    >Electrical
+                                </a>
+
+                                <a
+                                    href="./branding.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
+                                    >Branding
+                                </a>
+                            </span>
 
                             <a
                                 href="./projects.html"
