--- a/branding.html
+++ b/branding.html
@@ -180,7 +180,7 @@
                                 class="object-center object-cover rounded-3xl"
                             />
                             <span class="text-white block mt-4 text-xl"
-                                >Brasserie External Signage</span
+                                >Malmaison External Signage</span
                             >
                         </div>
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
