--- a/branding.html
+++ b/branding.html
@@ -72,6 +72,12 @@
                                     class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
                                     >Branding
                                 </a>
+
+                                <a
+                                    href="./facilities.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
+                                    >Facilties
+                                </a>
                             </span>
 
                             <a
