--- a/facilities.html
+++ b/facilities.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Branding</title>
+        <title>Facilities</title>
         <link href="./dist/output.css" rel="stylesheet" />
         <link
             rel="stylesheet"
@@ -71,6 +71,12 @@
                                     href="./branding.html"
                                     class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
                                     >Branding
+                                </a>
+
+                                <a
+                                    href="./facilities.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
+                                    >Facilties
                                 </a>
                             </span>
 
