new images on facilities slider

--- a/facilities.html
+++ b/facilities.html
@@ -270,58 +270,178 @@
             <div class="container">
                 <span
                     class="text-white uppercase text-sm font-light tracking-widest block"
-                    >Facilities Management we have carried out</span
+                    >Facilities Management and Maintenance Services</span
                 >
                 <div class="px-0 w-[140%] sm:w-[135%] pt-5 lg:pt-10">
                     <div class="js-work-slider -ml-2">
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
-                                src="./assets/images/facilities-management/cleaning.jpeg"
+                                src="./assets/images/new-facilites-slider/Street-Furniture.jpg"
                                 alt="cleaning"
                                 class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
                             />
                             <span class="text-white block mt-4 text-xl"
-                                >Healthcare cleaning for NHS</span
+                                >Street Furniture</span
                             >
                         </div>
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
-                                src="./assets/images/facilities-management/recycling.avif"
+                                src="./assets/images/new-facilites-slider/FF-&-E.jpg"
                                 alt="recycling"
                                 class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
                             />
                             <span class="text-white block mt-4 text-xl"
-                                >Recycling at Leeds University</span
+                                >FF & E</span
                             >
                         </div>
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
-                                src="./assets/images/facilities-management/haulage.webp"
+                                src="./assets/images/new-facilites-slider/Welfare-Facilities.jpg"
                                 alt="Hoarding graphics"
                                 class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
                             />
                             <span class="text-white block mt-4 text-xl"
-                                >Provision of new equipment</span
+                                >Welfare Facilities</span
                             >
                         </div>
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
-                                src="./assets/images/facilities-management/rewiring.jpeg"
+                                src="./assets/images/new-facilites-slider/Shop-Fitting.jpg"
                                 alt="Hoarding graphics"
                                 class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
                             />
                             <span class="text-white block mt-4 text-xl"
-                                >Warehouse planning for HSS</span
+                                >Shop Fitting</span
                             >
                         </div>
                         <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
                             <img
-                                src="./assets/images/facilities-management/off-furn.jpg"
+                                src="./assets/images/new-facilites-slider/Groundworks.jpg"
                                 alt="Office furniture"
                                 class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
                             />
                             <span class="text-white block mt-4 text-xl"
-                                >Office furniture for MVQ</span
+                                >Groundworks</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Hoardings.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Hoardings</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/H-Signage.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >H & S Signage</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Smoke-Alarms.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Smoke Alarms</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Lighting.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Lighting</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Environmental.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Environmental</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Site-CLearance.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Site Clearance</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Waste-Removal.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Waste Removal</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Workspace-Solutions.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Workspace Solutions</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Electrical.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Electrical</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/CCTV.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >CCTV</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Locksmith.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Locksmith</span
+                            >
+                        </div>
+                        <div class="w-full h-64 sm:h-72 md:h-64 lg:h-80 px-2">
+                            <img
+                                src="./assets/images/new-facilites-slider/Logistics.jpg"
+                                alt="Office furniture"
+                                class="object-center object-cover rounded-3xl h-[245px] sm:h-[400px]"
+                            />
+                            <span class="text-white block mt-4 text-xl"
+                                >Logistics</span
                             >
                         </div>
                     </div>
