--- a/facilities.html
+++ b/facilities.html
@@ -197,7 +197,7 @@
             </div>
         </section>
 
-        <section class="py-10 bg-zinc-400 bg-opacity-20">
+        <section class="py-10 bg-opacity-20">
             <div class="container">
                 <div class="flex flex-wrap">
                     <div
