--- a/workplace.html
+++ b/workplace.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>FF & E and Workplace Projects</title>
+        <title>FF&E and Workplace Projects</title>
         <link href="./dist/output.css" rel="stylesheet" />
         <link
             rel="stylesheet"
@@ -82,7 +82,7 @@
                                 <a
                                     href="./workplace.html"
                                     class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
-                                    >FF & E
+                                    >FF&E
                                 </a>
                             </span>
 
@@ -140,7 +140,7 @@
                 <h2
                     class="text-4xl lg:text-6xl font-bold text-white lg:leading-tight text-center tracking-wide"
                 >
-                    FF & E and Workplace Projects
+                    FF&E and Workplace Projects
                 </h2>
             </div>
         </section>
@@ -165,9 +165,9 @@
                             <span
                                 class="text-4xl lg:text-[50px] lg:leading-tight"
                             >
-                                I4Brands carries out FF & E installation and
+                                I4Brands carries out FF&E installation and
                                 Workplace projects - whether it be in an office,
-                                hospitality space or any other sommercial
+                                hospitality space or any other commercial
                                 building.
                             </span>
                             <br /><br />
@@ -280,7 +280,7 @@
         <section class="pb-5 lg:pb-10">
             <div class="container">
                 <h2 class="text-3xl lg:text-[40px] text-white lg:leading-tight">
-                    What is included within FF & E Procurement Services?
+                    What is included within FF&E Procurement Services?
                 </h2>
                 <p class="lg:text-xl text-white pt-6">
                     FF&E procurement services are unique to each business and
@@ -337,7 +337,7 @@
         <section class="py-10 lg:py-20">
             <div class="container">
                 <h2 class="text-3xl lg:text-[40px] text-white lg:leading-tight">
-                    Why do Commercial Businesses require FF & E Services?
+                    Why do Commercial Businesses require FF&E Services?
                 </h2>
                 <p class="lg:text-xl text-white pt-6">
                     Commercial businesses require FF&E services as they require
@@ -374,7 +374,7 @@
         <section class="pb-10 lg:pb-20">
             <div class="container">
                 <h2 class="text-3xl lg:text-[40px] text-white lg:leading-tight">
-                    Why do clients in the hospitality industry require FF & E
+                    Why do clients in the hospitality industry require FF&E
                     services?
                 </h2>
                 <p class="lg:text-xl text-white pt-6">
@@ -397,7 +397,7 @@
             <div class="container flex flex-col items-start">
                 <h2 class="text-3xl lg:text-[40px] text-white lg:leading-tight">
                     What consideration factors are there when looking to hire an
-                    FF & E specialist?
+                    FF&E specialist?
                 </h2>
 
                 <button
@@ -504,7 +504,7 @@
             <div class="container">
                 <span
                     class="text-white uppercase text-sm font-light tracking-widest block"
-                    >FF & E and workplace projects WE HAVE CARRIED OUT</span
+                    >FF&E and workplace projects WE HAVE CARRIED OUT</span
                 >
                 <div class="px-0 w-[140%] sm:w-[135%] pt-5 lg:pt-10">
                     <div class="js-work-slider -ml-2">
