--- a/electrical.html
+++ b/electrical.html
@@ -73,6 +73,18 @@
                                     class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
                                     >Facilties
                                 </a>
+
+                                <a
+                                    href="./street-furniture.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
+                                    >Street Furniture
+                                </a>
+
+                                <a
+                                    href="./workplace.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
+                                    >Workplace and FF&E
+                                </a>
                             </span>
 
                             <a
