--- a/workplace.html
+++ b/workplace.html
@@ -80,9 +80,15 @@
                                 </a>
 
                                 <a
+                                    href="./street-furniture.html"
+                                    class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
+                                    >Street Furniture
+                                </a>
+
+                                <a
                                     href="./workplace.html"
                                     class="relative pl-5 w-full border-white border-b lg:w-1/4 block pt-4 pb-2"
-                                    >FF&E
+                                    >Workplace and FF&E
                                 </a>
                             </span>
 
