--- a/environmental-services.html
+++ b/environmental-services.html
@@ -190,11 +190,11 @@
             </div>
         </section>
 
-        <section class="pt-10 lg:pt-20">
+        <section class="lg:pt-10">
             <div class="container">
                 <div class="flex flex-wrap">
                     <div
-                        class="w-full lg:w-1/2 text-white lg:pr-10 pt-10 lg:pt-0 flex items-center flex-col text-center"
+                        class="w-full lg:w-1/2 text-white lg:pr-10 lg:pt-0 flex items-center flex-col text-center"
                     >
                         <h3 class="font-bold text-3xl underline">
                             Biohazard Cleaning
@@ -209,7 +209,7 @@
                         class="w-full lg:w-1/2 text-white lg:pr-10 pt-10 lg:pt-0 flex items-center flex-col text-center"
                     >
                         <h3 class="font-bold text-3xl underline">
-                            Biohazard Cleaning
+                            Decontamination
                         </h3>
                         <p class="lg:text-xl pt-6">
                             Full Decontamination <br /><br />Crime Scene
@@ -225,7 +225,7 @@
             <div class="container">
                 <div class="flex flex-wrap">
                     <div
-                        class="w-full lg:w-1/2 text-white lg:pr-10 pt-10 lg:pt-0 flex items-center flex-col text-center"
+                        class="w-full lg:w-1/2 text-white lg:pr-10 lg:pt-0 flex items-center flex-col text-center"
                     >
                         <h3 class="font-bold text-3xl underline">
                             Crime Scene Cleaning
@@ -257,7 +257,7 @@
             <div class="container">
                 <div class="flex flex-wrap">
                     <div
-                        class="w-full lg:w-1/2 text-white lg:pr-10 pt-10 lg:pt-0 flex items-center flex-col text-center"
+                        class="w-full lg:w-1/2 text-white lg:pr-10 lg:pt-0 flex items-center flex-col text-center"
                     >
                         <h3 class="font-bold text-3xl underline">
                             Flood Restoration
@@ -287,7 +287,7 @@
             <div class="container">
                 <div class="flex flex-wrap">
                     <div
-                        class="w-full lg:w-1/2 text-white lg:pr-10 pt-10 lg:pt-0 flex items-center flex-col text-center"
+                        class="w-full lg:w-1/2 text-white lg:pr-10 lg:pt-0 flex items-center flex-col text-center"
                     >
                         <h3 class="font-bold text-3xl underline">
                             Property Maintenance
